--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<body>
 		Звіт про виконані завдання студента групи МІ-93 <a href="https://acnsci.org/semerikov">Семерікова С. О.</a>:
 		<ol>
-			<li><a href="hw1/homework1.html">Домашня робота до тижня 1</a></li>
+			<li><a href="hw1/homework1.html" target="_blank">Домашня робота до тижня 1</a></li>
+			<li><a href="hw2/homework2.html" target="_blank">Домашня робота до тижня 2</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
