--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<ol>
 			<li><a href="hw1/homework1.html" target="_blank">Домашня робота до тижня 1</a></li>
 			<li><a href="hw2/homework2.html" target="_blank">Домашня робота до тижня 2</a></li>
+			<li><a href="hw3/homework3.html" target="_blank">Домашня робота до тижня 3</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
