--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 	<head>
 	</head>
 	<body>
+		<a href="gen/generator.html" target="_blank">Генератор маркерів AR.js</a><p>
+
 		Звіт про виконані завдання студента групи МІ-93 <a href="https://acnsci.org/semerikov">Семерікова С. О.</a>:
 		<ol>
 			<li><a href="hw1/homework1.html" target="_blank">Домашня робота до тижня 1</a></li>
 			<li><a href="hw2/homework2.html" target="_blank">Домашня робота до тижня 2</a></li>
 			<li><a href="hw3/homework3.html" target="_blank">Домашня робота до тижня 3</a></li>
+			<li><a href="hw5/homework5.html" target="_blank">Домашня робота до тижня 5</a></li>
+			<li><a href="hw5/homework5a.html" target="_blank">Сонячна система у AR</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
