--- a/hw3/homework3.html
+++ b/hw3/homework3.html
@@ -15,8 +15,12 @@
     	<a-sphere radius=0.5></a-sphere>
     </a-marker>
 
-    <a-marker type="pattern" url="../images/pattern-n-marker.patt">
+    <a-marker type="pattern" url="../images/pattern-zero.patt">
     	<a-box color="blue"></a-sphere>
+    </a-marker>
+
+    <a-marker type="pattern" url="../images/pattern-VR.patt">
+    	<a-box color="green"></a-sphere>
     </a-marker>
 
     
@@ -64,3 +68,4 @@
   
   
 </html>
+
