--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 			<li><a href="hw2/homework2.html" target="_blank">Домашня робота до тижня 2</a></li>
 			<li><a href="hw3/homework3.html" target="_blank">Домашня робота до тижня 3</a></li>
 			<li><a href="hw5/homework5.html" target="_blank">Домашня робота до тижня 5</a></li>
-			<li><a href="hw5/homework5a.html" target="_blank">Сонячна система у AR</a></li>
+			<li><a href="hw5/homework5a.html" target="_blank">Сонячна система у AR.js</a></li>
+			<li><a href="hw5/homework5b.html" target="_blank">Приклад використання MindAR</a></li>
+			<li><a href="hw5/homework5c.html" target="_blank">Сонячна система у MindAR</a></li>
+			<li><a href="hw6/homework6.html" target="_blank">Домашнє завдання на тиждень 06</a></li>
+			<li><a href="hw6/homework6a.html" target="_blank">Домашнє завдання на тиждень 06 (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="lab1/task9_claude.html" target="_blank">ЛР1, сцена у ВР (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="lab1/task9_chatgpt.html" target="_blank">ЛР1, сцена у ВР (ChatGPT 4o Think)</a></li>
+			<li><a href="lab1/task9_gemini.html" target="_blank">ЛР1, сцена у ВР (Gemini 2.5 Pro Exp.)</a></li>
+			<li><a href="lab1/task9_grok.html" target="_blank">ЛР1, сцена у ВР (Grok 3 Beta Think)</a></li>
+			<li><a href="lab1/task9_claudeARjs.html" target="_blank">ЛР1, сцена у AR.js (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="lab1/task9_claudeMindAR.html" target="_blank">ЛР1, сцена у MindAR (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="hw8/exp1.html" target="_blank">тиждень 08 (Three.js + VR)</a></li>
+			<li><a href="hw8/exp2.html" target="_blank">тиждень 08 (Three.js + AR)</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
