--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 			<li><a href="lab1/task9_claudeMindAR.html" target="_blank">ЛР1, сцена у MindAR (Claude 3.7 Sonnet DeepMind)</a></li>
 			<li><a href="hw8/exp1.html" target="_blank">тиждень 08 (Three.js + VR)</a></li>
 			<li><a href="hw8/exp2.html" target="_blank">тиждень 08 (Three.js + AR)</a></li>
+			<li><a href="lab2/task9_claude.html" target="_blank">ЛР2, сцена у ВР (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="lab2/task9_claudeMindAR.html" target="_blank">ЛР2, сцена у MindAR (Claude 3.7 Sonnet DeepMind)</a></li>
+			<li><a href="hw9/hw9.html" target="_blank">Домашня робота до тижня 9 (A-Frame)</a></li>
+			<li><a href="hw10/exp1.html" target="_blank">MindAR + Mobilenet</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
