--- a/hw8/exp2.html
+++ b/hw8/exp2.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      body { margin: 0; }
+      html, body {
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	}
     </style>
 	<script type="importmap">
 	{
