--- a/hw10/exp1.html
+++ b/hw10/exp1.html
@@ -9,6 +9,22 @@
 	height: 100%;
 	overflow: hidden;
 	}
+	#result {
+	    position: absolute; /* Щоб можна було гнучко розмістити */
+	    width: 35vw; /* 25% від ширини вікна */
+	    height: 15vh; /* 10% від висоти вікна */
+	    background-color: white; /* Біле тло */
+	    font-size: 1.5em; /* Збільшений шрифт */
+	    color: black; /* Колір тексту (для контрасту) */
+	    display: flex; /* Центрування тексту */
+	    /*align-items: center;*/ /* Вертикальне центрування */
+	    /*justify-content: center;*/ /* Горизонтальне центрування */
+	    border: 1px solid #ccc; /* Тонка сіра рамка для краси */
+	    box-shadow: 0px 0px 10px rgba(0,0,0,0.1); /* Невелика тінь */
+	    top: 10px; /* Відступ від верху */
+	    left: 10px; /* Відступ зліва */
+	    border-radius: 8px; /* Трохи заокруглені кути */
+	  }
     </style>
 	<script type="importmap">
 	{
