--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<li><a href="lab2/task9_claudeMindAR.html" target="_blank">ЛР2, сцена у MindAR (Claude 3.7 Sonnet DeepMind)</a></li>
 			<li><a href="hw9/hw9.html" target="_blank">Домашня робота до тижня 9 (A-Frame)</a></li>
 			<li><a href="hw10/exp1.html" target="_blank">MindAR + Mobilenet</a></li>
+			<li><a href="ai/base.html" target="_blank">MindAR + AI</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
