--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			<li><a href="hw9/hw9.html" target="_blank">Домашня робота до тижня 9 (A-Frame)</a></li>
 			<li><a href="hw10/exp1.html" target="_blank">MindAR + Mobilenet</a></li>
 			<li><a href="ai/base.html" target="_blank">MindAR + AI</a></li>
+			<li><a href="ai/tm1.html" target="_blank">TeachableMachine, ex. 1</a></li>
+			<li><a href="ai/tm2.html" target="_blank">TeachableMachine, ex. 2 (MindAR)</a></li>
+			<li><a href="hw14/face.html" target="_blank">Emotions!</a></li>
+			<li><a href="lab3/task9_claudeWebXR.html" target="_blank">Green Cube сцена у WebXR</a></li>
+			<li><a href="lab3/task9_modelWebXR.html" target="_blank">LW3, сцена у WebXR</a></li>
 			<li>...</li>
 			<li>...</li>
 			<li>...</li>
